@@ -35,6 +35,11 @@ Version 6.4.17
   - Freetype-Font-Rendering verbessert, das Hinting funktioniert jetzt besser
     (Code aus ppl7 übernommen)
   - Makefile sollte nun abbrechen, wenn beim "make install" ein Fehler auftritt
+  - Statische Funktionen in CFile umbenannt und erweitert: Exists, TouchFile,
+    DeleteFile und FileAttr akzeptieren nurnoch einen Parameter mit dem Datei-
+    namen und keinen Formatstring mehr (zu fehleranfällig). Die neuen
+    Funktionen Existsf, TouchFilef, DeleteFilef und FileAttrf übernehmen die
+    alte Funktionalität und erwarten einen Formatstring.
 
 Version 6.4.16 vom 19.05.2013	(SVN-Tag: REL_6_4_16)
   - Bugfix: Fehlende "IFDEF"'s zur Prüfung der Syslog-Unterstützung in CLog
